style.css
* {
    box-sizing: border-box;
}

body {
    height: 100vh;
    margin: 0;
    display: flex;
    flex-direction: column;
}

header {
    background-color: brown;
    height: 56px;
}

main {
    background-color: aquamarine;
    flex-grow: 1;
    display: flex;
}

.side-menu {
    background-color: purple;
    width: 240px;
    flex-shrink: 0;
}

.main-content {
    background-color: chocolate;
    flex-grow: 1;
}

main .side-menu .main-content {
    overflow-y: scroll;
}

